Basic iPad UI, data management for Categories and Labels.

--- a/CashSplash/CashSplash/CashSplash-Info.plist
+++ b/CashSplash/CashSplash/CashSplash-Info.plist
@@ -39,6 +39,8 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Storyboard-iPhone</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>Storyboard-iPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
